xidlc/tests/snapshots/codegen_snapshot__axum__http_client_stream_ndjson.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_client_stream_ndjson.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[allow(
    non_snake_case,
    unused_attributes,
    unused_variables,
    unused_mut,
    unreachable_code,
    clippy::let_unit_value
)]
#[async_trait::async_trait]
pub trait HttpClientStreamService {
    async fn upload_chunk(
        &self,
        req: ::xidl_rust_axum::Request<
            xidl_rust_axum::stream::NdjsonStream<
                HttpClientStreamServiceUploadChunkRequest,
            >,
        >,
    ) -> ::xidl_rust_axum::Result<String>;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_in_HttpClientStreamService {
    use super::*;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_out_HttpClientStreamService {
    use super::*;
}
#[derive(::serde::Serialize)]
pub struct HttpClientStreamServiceUploadChunkRequestOutBody {
    #[serde(default)]
    pub file_id: String,
    #[serde(default)]
    pub chunk: Vec<u8>,
}
#[derive(::serde::Deserialize)]
pub struct HttpClientStreamServiceUploadChunkRequestInBody {
    pub file_id: String,
    pub chunk: Vec<u8>,
}
#[derive(::serde::Serialize, ::serde::Deserialize)]
pub struct HttpClientStreamServiceUploadChunkRequest {
    pub file_id: String,
    pub chunk: Vec<u8>,
}
pub struct HttpClientStreamServiceServer<T> {
    inner: ::std::sync::Arc<T>,
}
#[allow(non_snake_case)]
impl<T> HttpClientStreamServiceServer<T>
where
    T: HttpClientStreamService + Send + Sync + 'static,
{
    pub fn new(inner: T) -> Self {
        Self {
            inner: ::std::sync::Arc::new(inner),
        }
    }
    pub fn from_arc(inner: ::std::sync::Arc<T>) -> Self {
        Self { inner }
    }
    pub fn router(self) -> xidl_rust_axum::axum::Router {
        let _svc = self.inner;
        xidl_rust_axum::axum::Router::new()
            .route(
                "/upload/chunks",
                xidl_rust_axum::axum::routing::post(Self::upload_chunk),
            )
            .with_state(_svc)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn upload_chunk(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        body: ::xidl_rust_axum::axum::body::Body,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/plain") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let stream = xidl_rust_axum::stream::decode_ndjson_body::<
            HttpClientStreamServiceUploadChunkRequest,
        >(body);
        let data = stream;
        let mut resp = match svc
            .upload_chunk(::xidl_rust_axum::Request::new(headers, data))
            .await
        {
            Ok(resp_value) => {
                let mut resp = {
                    let body_value: String = resp_value;
                    let _ = &body_value;
                    let body = xidl_rust_axum::SerializeFactory::new("text/plain")
                        .to_vec(&body_value)?;
                    ::xidl_rust_axum::axum::response::Response::builder()
                        .status(
                            ::xidl_rust_axum::axum::http::StatusCode::from_u16(200)
                                .unwrap(),
                        )
                        .header(
                            ::xidl_rust_axum::axum::http::header::CONTENT_TYPE,
                            "text/plain",
                        )
                        .body(::xidl_rust_axum::axum::body::Body::from(body))
                        .map_err(|err| xidl_rust_axum::Error::new(
                            500,
                            format!("{err:?}"),
                        ))?
                };
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
}
impl<T> xidl_rust_axum::Service for HttpClientStreamServiceServer<T>
where
    T: HttpClientStreamService + Send + Sync + 'static,
{
    fn into_router(self) -> xidl_rust_axum::axum::Router {
        self.router()
    }
}
pub struct HttpClientStreamServiceClient {
    client: ::xidl_rust_axum::Client,
}
#[allow(non_snake_case)]
impl HttpClientStreamServiceClient {
    pub fn new(base_url: impl Into<String>) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::new(base_url),
        }
    }
    pub fn with_http(
        base_url: impl Into<String>,
        http: ::xidl_rust_axum::reqwest::Client,
    ) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::with_http(base_url, http),
        }
    }
}
#[allow(non_snake_case)]
impl HttpClientStreamServiceClient {
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn upload_chunk(
        &self,
        file_id: String,
        chunk: Vec<u8>,
    ) -> Result<
        xidl_rust_axum::stream::Writer<
            HttpClientStreamServiceUploadChunkRequest,
            String,
        >,
        xidl_rust_axum::Error,
    > {
        let xidl_path = "/upload/chunks".to_string();
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::POST, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str("text/plain")
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::CONTENT_TYPE,
                xidl_rust_axum::reqwest::header::HeaderValue::from_static(
                    "application/x-ndjson",
                ),
            );
        let (tx, rx) = xidl_rust_axum::tokio::sync::mpsc::channel(32);
        let outbound = xidl_rust_axum::futures_util::stream::unfold(
            rx,
            |mut rx| async move { rx.recv().await.map(|item| (item, rx)) },
        );
        *req.body_mut() = Some(
            xidl_rust_axum::stream::encode_ndjson_body(Box::pin(outbound)),
        );
        let http = self.client.http().clone();
        let response_task = xidl_rust_axum::tokio::spawn(async move {
            let resp = http
                .execute(req)
                .await
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            if resp.status().is_success() {
                let body = resp
                    .bytes()
                    .await
                    .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
                let body: String = xidl_rust_axum::DeserializeFactory::new("text/plain")
                    .from_slice(&body)?;
                Ok(body)
            } else {
                let status = resp.status();
                let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
                Err(xidl_rust_axum::Error::from_http_response(status, body))
            }
        });
        Ok(xidl_rust_axum::stream::Writer::new(tx, response_task))
    }
}
