xidlc/tests/snapshots/codegen_snapshot__axum__http_client_stream_report.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_client_stream_report.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct UploadChunk {
    pub part_id: String,
    pub bytes: Vec<u8>,
}
impl UploadChunk {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct UploadSummary {
    pub upload_id: String,
    pub accepted: u32,
}
impl UploadSummary {}
#[allow(
    non_snake_case,
    unused_attributes,
    unused_variables,
    unused_mut,
    unreachable_code,
    clippy::let_unit_value
)]
#[async_trait::async_trait]
pub trait HttpClientStreamReportService {
    async fn upload_parts(
        &self,
        req: ::xidl_rust_axum::Request<
            xidl_rust_axum::stream::NdjsonStream<
                HttpClientStreamReportServiceUploadPartsRequest,
            >,
        >,
    ) -> ::xidl_rust_axum::Result<UploadSummary>;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_in_HttpClientStreamReportService {
    use super::*;
    #[derive(::serde::Serialize, ::serde::Deserialize)]
    pub struct UploadChunk {
        pub part_id: String,
        pub bytes: Vec<u8>,
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<super::UploadChunk> for UploadChunk {
        fn from(value: super::UploadChunk) -> Self {
            Self {
                part_id: value.part_id,
                bytes: value.bytes.into_iter().collect(),
            }
        }
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<UploadChunk> for super::UploadChunk {
        fn from(value: UploadChunk) -> Self {
            Self {
                part_id: value.part_id,
                bytes: value.bytes.into_iter().collect(),
            }
        }
    }
    #[derive(::serde::Serialize, ::serde::Deserialize)]
    pub struct UploadSummary {
        pub upload_id: String,
        pub accepted: u32,
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<super::UploadSummary> for UploadSummary {
        fn from(value: super::UploadSummary) -> Self {
            Self {
                upload_id: value.upload_id,
                accepted: value.accepted,
            }
        }
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<UploadSummary> for super::UploadSummary {
        fn from(value: UploadSummary) -> Self {
            Self {
                upload_id: value.upload_id,
                accepted: value.accepted,
            }
        }
    }
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_out_HttpClientStreamReportService {
    use super::*;
    #[derive(::serde::Serialize, ::serde::Deserialize)]
    pub struct UploadChunk {
        pub part_id: String,
        pub bytes: Vec<u8>,
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<super::UploadChunk> for UploadChunk {
        fn from(value: super::UploadChunk) -> Self {
            Self {
                part_id: value.part_id,
                bytes: value.bytes.into_iter().collect(),
            }
        }
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<UploadChunk> for super::UploadChunk {
        fn from(value: UploadChunk) -> Self {
            Self {
                part_id: value.part_id,
                bytes: value.bytes.into_iter().collect(),
            }
        }
    }
    #[derive(::serde::Serialize, ::serde::Deserialize)]
    pub struct UploadSummary {
        pub upload_id: String,
        pub accepted: u32,
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<super::UploadSummary> for UploadSummary {
        fn from(value: super::UploadSummary) -> Self {
            Self {
                upload_id: value.upload_id,
                accepted: value.accepted,
            }
        }
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<UploadSummary> for super::UploadSummary {
        fn from(value: UploadSummary) -> Self {
            Self {
                upload_id: value.upload_id,
                accepted: value.accepted,
            }
        }
    }
}
#[derive(::serde::Serialize)]
pub struct HttpClientStreamReportServiceUploadPartsRequestOutBody {
    #[serde(default)]
    pub chunk: __xidl_out_HttpClientStreamReportService::UploadChunk,
}
#[derive(::serde::Deserialize)]
pub struct HttpClientStreamReportServiceUploadPartsRequestInBody {
    pub chunk: __xidl_in_HttpClientStreamReportService::UploadChunk,
}
#[derive(::serde::Serialize, ::serde::Deserialize)]
pub struct HttpClientStreamReportServiceUploadPartsRequest {
    pub chunk: UploadChunk,
}
pub struct HttpClientStreamReportServiceServer<T> {
    inner: ::std::sync::Arc<T>,
}
#[allow(non_snake_case)]
impl<T> HttpClientStreamReportServiceServer<T>
where
    T: HttpClientStreamReportService + Send + Sync + 'static,
{
    pub fn new(inner: T) -> Self {
        Self {
            inner: ::std::sync::Arc::new(inner),
        }
    }
    pub fn from_arc(inner: ::std::sync::Arc<T>) -> Self {
        Self { inner }
    }
    pub fn router(self) -> xidl_rust_axum::axum::Router {
        let _svc = self.inner;
        xidl_rust_axum::axum::Router::new()
            .route(
                "/uploads/parts",
                xidl_rust_axum::axum::routing::post(Self::upload_parts),
            )
            .with_state(_svc)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn upload_parts(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        body: ::xidl_rust_axum::axum::body::Body,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "application/json") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let stream = xidl_rust_axum::stream::decode_ndjson_body::<
            HttpClientStreamReportServiceUploadPartsRequest,
        >(body);
        let data = stream;
        let mut resp = match svc
            .upload_parts(::xidl_rust_axum::Request::new(headers, data))
            .await
        {
            Ok(resp_value) => {
                let mut resp = {
                    let body_value: __xidl_out_HttpClientStreamReportService::UploadSummary = resp_value
                        .into();
                    let _ = &body_value;
                    let body = xidl_rust_axum::SerializeFactory::new("application/json")
                        .to_vec(&body_value)?;
                    ::xidl_rust_axum::axum::response::Response::builder()
                        .status(
                            ::xidl_rust_axum::axum::http::StatusCode::from_u16(200)
                                .unwrap(),
                        )
                        .header(
                            ::xidl_rust_axum::axum::http::header::CONTENT_TYPE,
                            "application/json",
                        )
                        .body(::xidl_rust_axum::axum::body::Body::from(body))
                        .map_err(|err| xidl_rust_axum::Error::new(
                            500,
                            format!("{err:?}"),
                        ))?
                };
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
}
impl<T> xidl_rust_axum::Service for HttpClientStreamReportServiceServer<T>
where
    T: HttpClientStreamReportService + Send + Sync + 'static,
{
    fn into_router(self) -> xidl_rust_axum::axum::Router {
        self.router()
    }
}
pub struct HttpClientStreamReportServiceClient {
    client: ::xidl_rust_axum::Client,
}
#[allow(non_snake_case)]
impl HttpClientStreamReportServiceClient {
    pub fn new(base_url: impl Into<String>) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::new(base_url),
        }
    }
    pub fn with_http(
        base_url: impl Into<String>,
        http: ::xidl_rust_axum::reqwest::Client,
    ) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::with_http(base_url, http),
        }
    }
}
#[allow(non_snake_case)]
impl HttpClientStreamReportServiceClient {
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn upload_parts(
        &self,
        chunk: UploadChunk,
    ) -> Result<
        xidl_rust_axum::stream::Writer<
            HttpClientStreamReportServiceUploadPartsRequest,
            UploadSummary,
        >,
        xidl_rust_axum::Error,
    > {
        let xidl_path = "/uploads/parts".to_string();
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::POST, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                        "application/json",
                    )
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::CONTENT_TYPE,
                xidl_rust_axum::reqwest::header::HeaderValue::from_static(
                    "application/x-ndjson",
                ),
            );
        let (tx, rx) = xidl_rust_axum::tokio::sync::mpsc::channel(32);
        let outbound = xidl_rust_axum::futures_util::stream::unfold(
            rx,
            |mut rx| async move { rx.recv().await.map(|item| (item, rx)) },
        );
        *req.body_mut() = Some(
            xidl_rust_axum::stream::encode_ndjson_body(Box::pin(outbound)),
        );
        let http = self.client.http().clone();
        let response_task = xidl_rust_axum::tokio::spawn(async move {
            let resp = http
                .execute(req)
                .await
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            if resp.status().is_success() {
                let body = resp
                    .bytes()
                    .await
                    .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
                let body: __xidl_in_HttpClientStreamReportService::UploadSummary = xidl_rust_axum::DeserializeFactory::new(
                        "application/json",
                    )
                    .from_slice(&body)?;
                Ok(body.into())
            } else {
                let status = resp.status();
                let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
                Err(xidl_rust_axum::Error::from_http_response(status, body))
            }
        });
        Ok(xidl_rust_axum::stream::Writer::new(tx, response_task))
    }
}
